# libtimidity

./: AUTHORS  CHANGES  COPYING  ChangeLog  INSTALL  Makefile.am  README  README.sf  configure.ac  libtimidity.pc.in  libtimidity.spec.in
src/: Makefile.am  Makefile.amigaos  Makefile.aros  Makefile.darwin  Makefile.dj  Makefile.emx  Makefile.lcc  Makefile.mingw  Makefile.morphos  Makefile.os2  Makefile.vbcc  Makefile.w32  OWMakefile.win32  common.c  common.h  dls_compat.h  filenames.h  instrum.c  instrum.h  instrum_dls.c  instrum_dls.h  mix.c  mix.h  options.h  output.c  output.h  playmidi.c  playmidi.h  readmidi.c  readmidi.h  readsbk.c  resample.c  resample.h  sbk.h  sflayer.h  sndfont.c  sndfont.h  stream.c  tables.h  timi_endian.h  (+4 more)
src/VS2005/: timidity_static.vcproj
src/VisualStudio/: libtimidity.vcproj  libtimidity.vcxproj  libtimidity.vcxproj.filters  timidity_static.vcproj  timidity_static.vcxproj
src/XCode/: Info.plist  InfoPlist.strings
src/XCode/libtimidity.xcodeproj/: project.pbxproj
tests/: Makefile.am  midi2raw.c  playmidi.c  runtest.sh
